# concept-atlas

./: .env.example  .gitignore  DECISIONS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
concepts/: colors.json  countries.json  professions.json
experiments/: common.py  make_graph.py  make_results.py  results.md  run_patching.py  run_probes.py
experiments/results/: patching-gpt2-colors.json  patching-gpt2-countries.json  patching-gpt2-professions.json  patching-llama-colors.json  patching-llama-countries.json  patching-llama-professions.json  probes-gpt2.json  probes-llama.json
src/: __init__.py  activation_store.py  api.py  backends.py  extract.py  graph.py  hooks.py  patching.py  probes.py
static/: app.js  graph.json  index.html  style.css
tests/: conftest.py  test_activation_store.py  test_api.py  test_backends.py  test_experiments.py  test_graph.py  test_hooks.py  test_patching.py  test_probes.py
