[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-atlas"
version = "0.1.0"
description = "Extract a causal concept graph from a transformer's internals: probes locate concepts, activation patching tests causal links, D3 renders the result."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rohan Ramachandran" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
mlx = [
    "mlx-lm>=0.31",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
